--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,35 @@
 body {
     font-family: 'Montserrat', sans-serif;
-    background-color: #171f2e;
+
+    background-color: #5a5a5a
     font-weight: 400;
 }
 
 .highlight {
-    color: #f85857;
+    color: orange;
     font-weight: 700;
 }
 .highlight a{
     
-    color: #f85857;
-    font-weight: 700;
+color: orange;
+    
+font-weight: 700;
 }
 .highlight a:hover{
     
     color: #171f2e; 
 }
 section {
-    padding: 60px 0;
+    /* padding: 60px 0; */
 }
 
 #header {
+    background-color: #5a5a5a;
+    padding: 0;
+}
+#header> div > div > div{
     background-color: #232321;
+
 }
 
 #header img {
@@ -35,12 +42,12 @@ section {
 #header .intro {
     text-align: center;
     color: #fff;
+    padding: 100px 0;
 }
-
 .hero-text {
     width: 50%;
     margin: 0 auto;
-    border: 3px solid #f2cc33;
+    border: 5px solid orange;
     border-radius: 3px;
     margin-bottom: 60px;
 }
@@ -62,11 +69,15 @@ section {
 
 #header h3 {
     font-weight: 400;
-    margin-bottom: 60px;
+    margin-bottom: 0;
 }
 
 #info{
-    background-color: #fff;
+    background-color: #fff; 
+}
+#info .container{
+        background-color: #e9ebee;
+    padding: 60px 0;
 }
 
 #info img {
@@ -127,35 +138,70 @@ h3,
     margin-bottom: 20px;
 }
 
-#view {
+#view .container{
     background-color: #e9ebee;
     padding: 60px 0;
 }
 
 
 .img-holder_desktop,
-.img-holder_phone{
+.img-holder_phone,
+.img-holder_tablet{
     position: relative;
     margin-bottom: 30px;
     overflow: hidden;
 }
+.img-holder_phone{
+    width: 250px;
+    margin: 0 auto;
+}
 .desktop{
     position: absolute;
     top: 0;
-    left: 25px;
-    max-height: 304px;
+    left: 0;
+    height: 340px;
     overflow-x: hidden;
+    border-left: 26px solid transparent;
+    border-top: 35px solid transparent;
+    border-right: 28px solid transparent;
 }
 .phone{
     position: absolute;
-    top: 50px;
-    left: 30px;
+    top: 0;
+    left: 0;
     max-width: 295px;
-    max-height: 533px;
+    max-height: 365px;
     overflow: hidden;
     /* overflow: scroll; */
+    border-left: 29px solid transparent;
+    border-top: 84px solid transparent;
+    border-right: 23px solid transparent;
 }
-
+.img-holder_tablet{
+    width: 350px;
+    margin: 0 auto;
+}
+.tablet{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 399px;
+    overflow-x: hidden;
+    border-left: 55px solid transparent;
+    border-top: 50px solid transparent;
+    border-right: 55px solid transparent;
+}
+.tablet #tablet{
+    width: 820px;
+    height: 1070px;
+    top: 0;
+    left: 0;
+    transform: scale(0.219);
+    -webkit-transform: scale(0.291);
+    -o-transform: scale(0.219);
+    -ms-transform: scale(0.219);
+    -moz-transform: scale(0.219);
+}
 #desktop_image {
     /* position: absolute; */
     /* top: 5.7%; */
@@ -175,6 +221,14 @@ h3,
 #grade,
 #seo {
     border-bottom: 1px solid rgba(233, 235, 238, 0.2);
+    background: #5a5a5a;
+}
+#seo .container,#suggestion .container,#grade .container{
+        background-color: #171f2e;
+}
+
+#suggestion{
+        background: #5a5a5a;
 }
 
 #grade h1, 
@@ -418,15 +472,17 @@ iframe {
 
 
 .desktop #desktop{
-        left: -20px;
-        top: 25px;
+        left: 0;
+        top: 0;
         width: 1600px;
-        min-height: 875px;
-        transform: scale(0.3181);
-        -webkit-transform: scale(0.3181);
-        -o-transform: scale(0.3181);
-        -ms-transform: scale(0.3181);
-        -moz-transform: scale(0.3181);
+        height: 992px;
+        /* width: 1600px; */
+        /* min-height: 3000px; */
+        transform: scale(0.305);
+        -webkit-transform: scale(0.305);
+        -o-transform: scale(0.305);
+        -ms-transform: scale(0.305);
+        -moz-transform: scale(0.305);
         transform-origin: top left;
         -webkit-transform-origin: top left;
         -o-transform-origin: top left;
@@ -434,125 +490,166 @@ iframe {
         -moz-transform-origin: top left;
 }
 .phone #phone{
-    width: 611px;
+    width: 500px;
     height: 1070px;
     top: 0;
     left: 0;
     overflow-y: hidden;
-    transform: scale(0.5);
+    transform: scale(0.375);
 }
 
 @media (max-width: 1199px){
   .desktop{
-        left: 22px;
+        left: 0;
+        height: 285px;
+        border-left: 22px solid transparent;
+        border-top: 30px solid transparent;
+        border-right: 22px solid transparent;
     }
-    .desktop #desktop {top: 22px;transform: scale(0.265);-webkit-transform: scale(0.267);-o-transform: scale(0.265);-ms-transform: scale(0.265);-moz-transform: scale(0.265);}
+    .desktop #desktop {top: 0px;
+        transform: scale(0.253);
+    -webkit-transform: scale(0.253);
+    -o-transform: scale(0.253);
+    -ms-transform: scale(0.253);
+    -moz-transform: scale(0.253);}
 .phone {
-    top: 42px;
-    left: 25px;
+    /* top: 42px; */
+    /* left: 25px; */
 }
 .phone #phone {
-    width: 611px;
-    height: 1120px;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    transform: scale(0.395);
+    /* width: 611px; */
+    /* height: 1120px; */
+    /* top: 0; */
+    /* left: 0; */
+    /* overflow-y: hidden; */
+    /* transform: scale(0.395); */
 }
 }
 @media (max-width: 1079px){
     .desktop{
-        left: 21px;
+        left: 0;
+        border-left: 22px solid transparent;
+        border-top: 30px solid transparent;
+        border-right: 22px solid transparent;
     }
-    .desktop #desktop {top: 22px;transform: scale(0.265);-webkit-transform: scale(0.267);-o-transform: scale(0.265);-ms-transform: scale(0.265);-moz-transform: scale(0.265);}
+    .desktop #desktop {top: 0;
+        transform: scale(0.256);
+    -webkit-transform: scale(0.256);
+    -o-transform: scale(0.256);
+    -ms-transform: scale(0.256);
+    -moz-transform: scale(0.256);}
 .phone {
-    top: 42px;
-    left: 25px;
+    /* top: 42px; */
+    /* left: 25px; */
 }
 .phone #phone {
-    width: 611px;
-    height: 1120px;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    transform: scale(0.395);
+    /* width: 611px; */
+    /* height: 1120px; */
+    /* top: 0; */
+    /* left: 0; */
+    /* overflow-y: hidden; */
+    /* transform: scale(0.395); */
 }
 }
 @media (max-width: 991px){
     .desktop{
-        left: 15px;
+        left: 0;
+        border-left: 16px solid transparent;
+        border-top: 22px solid transparent;
+        border-right: 16px solid transparent;
     }
-    .desktop #desktop { 
-top: 15px;
-    transform: scale(0.265);
-    -webkit-transform: scale(0.2);
-    -o-transform: scale(0.265);
-    -ms-transform: scale(0.265);
-    -moz-transform: scale(0.265);
-}
-.phone { 
-    top: 30px;
-    left: 18px; 
+    .desktop #desktop {top: 0;
+        transform: scale(0.186);
+    -webkit-transform: scale(0.186);
+    -o-transform: scale(0.186);
+    -ms-transform: scale(0.186);
+    -moz-transform: scale(0.186);}
+.phone {
+    /* top: 30px; */
+    /* left: 18px; */
 }
 .phone #phone {
-    width: 611px;
-    height: 1120px;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    transform: scale(0.285);
+    /* width: 611px; */
+    /* height: 1120px; */
+    /* top: 0; */
+    /* left: 0; */
+    /* overflow-y: hidden; */
+    /* transform: scale(0.285); */
 }
 }
 @media (max-width: 767px){
+    #myTab .nav-link {
+    display: block;
+    padding: 7px 30px !important;
+    background: #232321;
+    color: #fff;
+    margin: 7px !important;
+    font-size: 13px !important;
+}
     .desktop{
-        left: 12px;
+        left: 0;
+        border-left: 16px solid transparent;
+        border-top: 22px solid transparent;
+        border-right: 16px solid transparent;
     }
-    .desktop #desktop {top: 11px;transform: scale(0.265);-webkit-transform: scale(0.148);-o-transform: scale(0.265);-ms-transform: scale(0.265);-moz-transform: scale(0.265);}
+    .desktop #desktop {top: 0;
+        transform: scale(0.186);
+    -webkit-transform: scale(0.186);
+    -o-transform: scale(0.186);
+    -ms-transform: scale(0.186);
+    -moz-transform: scale(0.186);}
 .phone {
-    top: 22px;
-    left: 12px;
-    max-width: 425px;
-    max-height: 775px;
+    /* top: 22px; */
+    /* left: 12px; */
+    /* max-width: 425px; */
+    /* max-height: 775px; */
 }
 .phone #phone {
-    max-width: 611px;
-    height: 1125px;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    transform: scale(0.204);
+    /* max-width: 611px; */
+    /* height: 1125px; */
+    /* top: 0; */
+    /* left: 0; */
+    /* overflow-y: hidden; */
+    /* transform: scale(0.204); */
 }
 }
 @media (max-width: 576px){   
-.img-holder_desktop, .img-holder_phone { 
-    max-width: 335px;
-    width: 335px;
-    margin: 0 auto;
+.img-holder_desktop {
+   width: 335px; 
+     margin: 0 auto; 
 }     
     .desktop{
-        left: 16px;
+        left: 0;
+        border-left: 16px solid transparent;
+        border-top: 22px solid transparent;
+        border-right: 16px solid transparent;
     }
-    .desktop #desktop {top: 14px;transform: scale(0.265);-webkit-transform: scale(0.203);-o-transform: scale(0.265);-ms-transform: scale(0.265);-moz-transform: scale(0.265);}
+    .desktop #desktop {top: 0;
+        transform: scale(0.19);
+        -webkit-transform: scale(0.19);
+        -o-transform: scale(0.19);
+        -ms-transform: scale(0.19);
+        -moz-transform: scale(0.19);}
 .phone {
-    top: 48px;
-    left: 29px;
-    max-width: 437px;
-    max-height: 775px;
+    /* top: 48px; */
+    /* left: 29px; */
+    /* max-width: 437px; */
+    /* max-height: 775px; */
 }
 .phone #phone {
-    max-width: 611px;
-    height: 1125px;
-    top: 0;
-    left: 0;
-    overflow-y: hidden;
-    transform: scale(0.46);
+    /* max-width: 611px; */
+    /* height: 1125px; */
+    /* top: 0; */
+    /* left: 0; */
+    /* overflow-y: hidden; */
+    /* transform: scale(0.46); */
 }
 .desktop-ui-draggable iframe {
     left: 22%;
     top: 128px;
     width: 1600px;
     height: 992px;
-    transform: scale(0.3181);
+    transform: scale(0.198);
     -webkit-transform: scale(0.198);
     }
     .desktop-ui-draggable {
@@ -567,11 +664,11 @@ top: 15px;
     height: 802px;
     top: 15px;
     left: 26%;
-    transform: scale(0.277);
+    transform: scale(0.178);
     -webkit-transform: scale(0.178);
-    -o-transform: scale(0.277);
-    -ms-transform: scale(0.277);
-    -moz-transform: scale(0.277);
+    -o-transform: scale(0.178);
+    -ms-transform: scale(0.178);
+    -moz-transform: scale(0.178);
     transform-origin: top left;
     -webkit-transform-origin: top left;
     -o-transform-origin: top left;
@@ -596,3 +693,10 @@ display: none;
 }
 }
 
+#myTab .nav-link {
+    display: block;
+    padding: 10px 30px;
+    background: #232321;
+    color: #fff;
+    margin: 10px;
+}   
