--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,14 @@ font-weight: 700;
 }
 section {
     /* padding: 60px 0; */
+    background: #5a5a5a;
 }
 
 #header {
     background-color: #5a5a5a;
     padding: 0;
 }
-#header> div > div > div{
+#header  div{
     background-color: #232321;
 
 }
@@ -73,11 +74,11 @@ section {
 }
 
 #info{
-    background-color: #fff; 
+    background-color: #5a5a5a;
 }
 #info .container{
-        background-color: #e9ebee;
-    padding: 60px 0;
+        background-color: #171f2e;
+        padding: 60px 0;
 }
 
 #info img {
@@ -87,6 +88,7 @@ section {
 h1 {
     margin-bottom: 60px;
     font-weight: 500;
+    color: #fff;
 }
 
 h3,
@@ -96,11 +98,13 @@ h3,
 
 #info h5{
     margin-bottom: 12px;
+    color: #fff;
 }
 
 .para {
     font-size: 12px;
     padding: 0 10%;
+    color: #fff;
 }
 
 #info h2 {
@@ -132,6 +136,7 @@ h3,
 
 #info h3 {
     margin-bottom: 20px;
+    color: #fff;
 }
 
 #info button {
@@ -139,7 +144,7 @@ h3,
 }
 
 #view .container{
-    background-color: #e9ebee;
+    background-color: #171f2e;
     padding: 60px 0;
 }
 
@@ -700,7 +705,13 @@ display: none;
 #myTab .nav-link {
     display: block;
     padding: 10px 30px;
-    background: #232321;
+    background: orange;
     color: #fff;
     margin: 10px;
 }   
+h4,p, h5 { 
+    color: #fff;
+}
+.orange{
+    background-color: orange
+}
